--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,38 @@
+# Dependencies
 node_modules/
+/.pnp
+.pnp.js
+
+# Build outputs
+/dist
+/build
+
+# Environment variables
 .env
 .env.local
-dist/
-build/
-.DS_Store
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# Replit specific
+.replit
+.replitattributes
+.upm/
